[tool.poetry]
name = "bao"
version = "0.1.0"
description = ""
authors = ["Ivan Gonzalez <scratchmex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
